[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Instructions.gd" type="Script" id=1]
[ext_resource path="res://Assets/Silver.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/instr1.png" type="Texture" id=3]
[ext_resource path="res://Assets/2D-monkey/monkey-right-idle.png" type="Texture" id=4]
[ext_resource path="res://Assets/2D-monkey/monkey-right-die.png" type="Texture" id=5]
[ext_resource path="res://Assets/fruit_banana.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=18]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.227451, 0.905882, 0.945098, 0.0980392 )
border_color = Color( 0.227451, 0.905882, 0.945098, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.227451, 0.905882, 0.945098, 0.0980392 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.227451, 0.905882, 0.945098, 1 )

[sub_resource type="DynamicFont" id=19]
size = 48
font_data = ExtResource( 2 )

[node name="Instructions" type="Popup"]
margin_right = 900.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="InstructionTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Intro" type="Tabs" parent="InstructionTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="InstructionTabs/Intro"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="InstructionTabs/Intro/MarginContainer"]
margin_right = 892.0
margin_bottom = 569.0

[node name="RichTextLabel" type="Label" parent="InstructionTabs/Intro/MarginContainer/GridContainer"]
margin_right = 859.0
margin_bottom = 111.0
rect_min_size = Vector2( 200, 20 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Welcome to the tutorial, used A and D to cycle through tabs 
or click on them individually"

[node name="pic" type="Sprite" parent="InstructionTabs/Intro/MarginContainer/GridContainer"]
position = Vector2( 700, 296 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 3 )

[node name="Explananation" type="Label" parent="InstructionTabs/Intro/MarginContainer/GridContainer"]
margin_top = 115.0
margin_right = 859.0
margin_bottom = 340.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
text = "
The object of the game is to 
survive as long as possible without 
hitting one of the black squares"

[node name="Warnings" type="Label" parent="InstructionTabs/Intro/MarginContainer/GridContainer"]
margin_top = 344.0
margin_right = 859.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 3 )
text = "
Black tile = instant death
White tile = safe 
Red blinking tiles = tile is about to change to black"

[node name="Movement" type="Tabs" parent="InstructionTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="b" type="ColorRect" parent="InstructionTabs/Movement"]
margin_left = 325.0
margin_top = 490.0
margin_right = 370.0
margin_bottom = 535.0
color = Color( 0, 0, 0, 1 )

[node name="w1" type="ColorRect" parent="InstructionTabs/Movement"]
margin_left = 348.0
margin_top = 208.0
margin_right = 388.0
margin_bottom = 248.0

[node name="w2" type="ColorRect" parent="InstructionTabs/Movement"]
margin_left = 400.0
margin_top = 208.0
margin_right = 440.0
margin_bottom = 248.0

[node name="w3" type="ColorRect" parent="InstructionTabs/Movement"]
margin_left = 400.0
margin_top = 160.0
margin_right = 440.0
margin_bottom = 200.0

[node name="w4" type="ColorRect" parent="InstructionTabs/Movement"]
margin_left = 348.0
margin_top = 160.0
margin_right = 388.0
margin_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="InstructionTabs/Movement"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="InstructionTabs/Movement/MarginContainer"]
margin_right = 713.0
margin_bottom = 454.0

[node name="BasicMovement" type="Label" parent="InstructionTabs/Movement/MarginContainer/GridContainer"]
margin_right = 713.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 4 )
text = "Basic Movement:
W = Up, A = Left, S = Down, D = Right"

[node name="Dash" type="Label" parent="InstructionTabs/Movement/MarginContainer/GridContainer"]
margin_top = 115.0
margin_right = 713.0
margin_bottom = 454.0
custom_fonts/font = SubResource( 5 )
text = "
Dash Ability:
First hold space
Then click WASD in the direction your want to dash
This will transport you two squares
Useful for traversing over black squares"

[node name="Monkey1" type="AnimatedSprite" parent="InstructionTabs/Movement/MarginContainer/GridContainer"]
position = Vector2( 370, 199 )
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
frame = 3

[node name="Monkey2" type="AnimatedSprite" parent="InstructionTabs/Movement/MarginContainer/GridContainer"]
position = Vector2( 400, 490 )
scale = Vector2( 3, 3 )
frames = SubResource( 17 )

[node name="Points" type="Tabs" parent="InstructionTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="InstructionTabs/Points"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TimePts" type="Label" parent="InstructionTabs/Points/MarginContainer"]
margin_right = 652.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 18 )
text = "Point overview:
You can gain points two ways
1) By surviving, earn 5 pts per second
2) Grab a banana off a tile, +50 points
Each of these actions gets added to the total"

[node name="ScoreImg" type="Sprite" parent="InstructionTabs/Points/MarginContainer"]
position = Vector2( 268, 416 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 159.519, 21.0531, 340.32, 92.0538 )

[node name="Sprite" type="Sprite" parent="InstructionTabs/Points/MarginContainer"]
position = Vector2( 692, 408 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Conclusion" type="Tabs" parent="InstructionTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Play Button" type="Button" parent="InstructionTabs/Conclusion"]
margin_left = 196.0
margin_top = 288.0
margin_right = 698.0
margin_bottom = 406.0
custom_fonts/font = SubResource( 20 )
custom_styles/hover = SubResource( 22 )
custom_styles/focus = SubResource( 21 )
text = "Play Game"

[node name="MarginContainer" type="MarginContainer" parent="InstructionTabs/Conclusion"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="InstructionTabs/Conclusion/MarginContainer"]
margin_right = 892.0
margin_bottom = 564.0

[node name="Conclusion" type="Label" parent="InstructionTabs/Conclusion/MarginContainer/GridContainer"]
margin_right = 840.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 19 )
text = "You are now ready to play the game!
Note that as the longer you survive in the game, the tiles 
will keep spawning faster and faster
Best of luck
Press ENTER to play"

[connection signal="tab_changed" from="InstructionTabs" to="." method="_on_InstructionTabs_tab_changed"]
[connection signal="animation_finished" from="InstructionTabs/Movement/MarginContainer/GridContainer/Monkey2" to="." method="_on_Monkey2_animation_finished"]
[connection signal="pressed" from="InstructionTabs/Conclusion/Play Button" to="." method="_on_Play_Button_pressed"]
